intTests/test_type_errors/err029.log.good
Loading file "err029.saw"
Type errors:
  err029.saw:7:9-7:13: Kind mismatch: expected * -> * but found *
  err029.saw:7:20-7:27: Type mismatch.
    Mismatch of type constructors. Expected: <Block> but got Term
    err029.saw:7:9-7:17: The type t.0 Int arises from this type annotation
    err029.saw:7:20-7:27: The type Term arises from the type of this term

    Expected: t.0 Int
    Found:    Term

    within "x" (err029.saw:7:5-7:6)


FAILED
